--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preconnect" href="https://fonts.bunny.net">
   <link href="https://fonts.bunny.net/css?family=poppins:400,500" rel="stylesheet" />
-  <link rel="stylesheet" href="src/css/style.css" />
+  <link rel="stylesheet" href="src/style.css" />
   <title>Pomodoro Timer</title>
 </head>
 <body>
