refactor: remove hrefs from mode buttons
Use class selector instead of element selector for mode styles and add
cursor pointer to mode buttons

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
   <h1 class="main-heading">pomodoro</h1>
   <div class="modes">
-    <a class="mode" href="#" data-time="1500">pomodoro</a>
-    <a class="mode" href="#" data-time="300">short break</a>
-    <a class="mode" href="#" data-time="900">long break</a>
+    <a class="mode" data-time="1500">pomodoro</a>
+    <a class="mode" data-time="300">short break</a>
+    <a class="mode" data-time="900">long break</a>
   </div>
 
   <div class="get-started">
