feat(settings): add basic input validation for modal form

--- a/index.html
+++ b/index.html
@@ -56,17 +56,17 @@
         <div class="settings-modal__inputs-wrap settings-modal__inputs-wrap--top-spacer">
           <div>
             <label for="pomodoro">pomodoro</label>
-            <input type="number" name="pomodoro" id="pomodoro" value="25" />
+            <input type="number" name="pomodoro" id="pomodoro" value="25" min="1" required />
           </div>
 
           <div>
             <label for="short-break">short break</label>
-            <input type="number" name="short-break" id="short-break" value="5" />
+            <input type="number" name="short-break" id="short-break" value="5" min="1" required />
           </div>
 
           <div>
             <label for="long-break">long break</label>
-            <input type="number" name="long-break" id="long-break" value="15" />
+            <input type="number" name="long-break" id="long-break" value="15" min="1" required />
           </div>
         </div>
       </div>
