--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preconnect" href="https://fonts.bunny.net">
-  <link href="https://fonts.bunny.net/css?family=poppins:400,500,600" rel="stylesheet" />
+  <link href="https://fonts.bunny.net/css?family=aleo:400,500,600|jetbrains-mono:400,500,600|poppins:400,500,600" rel="stylesheet" />
   <link rel="stylesheet" href="src/style.css" />
   <title>Pomodoro Timer</title>
 </head>
@@ -75,9 +75,9 @@
         <h4>Font</h4>
         <div class="settings-modal__inputs-wrap">
           <button class="radio-btn font-sans-serif active" type="button" data-font="sans-serif"
-            title="sans-serif">Aa</button>
-          <button class="radio-btn font-serif" type="button" data-font="serif" title="serif">Aa</button>
-          <button class="radio-btn font-mono" type="button" data-font="mono" title="mono">Aa</button>
+            title="Poppins (sans-serif)">Aa</button>
+          <button class="radio-btn font-serif" type="button" data-font="serif" title="Aleo (serif)">Aa</button>
+          <button class="radio-btn font-mono" type="button" data-font="mono" title="JetBrains Mono (monospace)">Aa</button>
         </div>
       </div>
 
