refactor: split index.js into ES modules
- Organise assets and css files into separate folders
- Add favicon

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preconnect" href="https://fonts.bunny.net">
+  <link rel="shortcut icon" href="./src/assets/favicon.ico" type="image/x-icon" />
   <link href="https://fonts.bunny.net/css?family=aleo:400,500,600|jetbrains-mono:400,500,600|poppins:400,500,600" rel="stylesheet" />
-  <link rel="stylesheet" href="src/style.css" />
+  <link rel="stylesheet" href="src/css/style.css" />
   <title>Pomodoro Timer</title>
 </head>
 
@@ -94,9 +95,9 @@
     <button class="settings-modal__btn">Apply</button>
   </div>
 
-  <audio src="src/sounds/short-alarm-clock-sound.mp3"></audio>
+  <audio src="src/assets/short-alarm-clock-sound.mp3"></audio>
 
-  <script src="src/index.js"></script>
+  <script src="src/js/index.js" type="module"></script>
 </body>
 
 </html>
