refactor: trim length for alarm audio file
Since the audio file is now shorter, the sound doesn't need to start
from the 5 second mark

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <button class="settings-modal__btn">Apply</button>
   </div>
 
-  <audio src="src/assets/short-alarm-clock-sound.mp3"></audio>
+  <audio src="src/assets/alarm-sound.mp3"></audio>
 
   <script src="src/js/index.js" type="module"></script>
 </body>
