--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <div class="settings-modal__container" popover id="settings-modal">
     <div class="settings-modal__header">
       <h3>Settings</h3>
-      <button class="settings-modal__close">
+      <button class="settings-modal__close" popovertarget="settings-modal" popovertargetaction="hide">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="#919097"
           class="icon">
           <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
